<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    tools:context=".MainActivity">



    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="310dp"
        android:layout_height="89dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m_trico" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingl_s" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:text="@string/peso"
        app:layout_constraintEnd_toStartOf="@+id/txtEstatura"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup1" />

    <TextView
        android:id="@+id/txtEstatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="189dp"
        android:layout_marginLeft="189dp"
        android:layout_marginTop="20dp"
        android:text="@string/estatura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup1" />

    <Button
        android:id="@+id/buttonCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/pinkk"
        android:text="@string/calcular"
        android:textColor="@color/salmon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/peso1" />


    <Button
        android:id="@+id/buttonHistorico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/salmon"
        android:text="@string/historico"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCategoria" />

    <EditText
        android:id="@+id/peso1"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/unidad"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPeso" />

    <EditText
        android:id="@+id/esta3"
        android:layout_width="92dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="41dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/unidad"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/buttonCalcular"
        app:layout_constraintStart_toEndOf="@+id/peso1"
        app:layout_constraintTop_toBottomOf="@+id/txtEstatura"
        app:layout_constraintVertical_bias="0.325" />

    <EditText
        android:id="@+id/esta2"
        android:layout_width="92dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginBottom="41dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/unidad"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/buttonCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/esta3"
        app:layout_constraintTop_toBottomOf="@+id/txtEstatura"
        app:layout_constraintVertical_bias="0.325" />

    <TextView
        android:id="@+id/txtIMCC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="63dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="15dp"
        android:background="@color/salmon"
        android:text="@string/imc"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/txtCate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalcular"
        app:layout_constraintVertical_bias="0.133" />

    <TextView
        android:id="@+id/txtCate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginLeft="53dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="12dp"
        android:background="@color/salmon"
        android:text="@string/categor_a"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/buttonHistorico"
        app:layout_constraintEnd_toStartOf="@+id/txtCategoria"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewPrime22"
        android:layout_width="85dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/_0"
        app:layout_constraintStart_toEndOf="@+id/txtIMCPrime"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalcular" />

    <TextView
        android:id="@+id/txtIMC"
        android:layout_width="64dp"
        android:layout_height="19dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="24dp"
        android:text="@string/_0"
        app:layout_constraintStart_toEndOf="@+id/txtIMCC"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalcular" />

    <TextView
        android:id="@+id/txtCategoria"
        android:layout_width="192dp"
        android:layout_height="26dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:text="@string/_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIMCPrime" />

    <TextView
        android:id="@+id/txtIMCPrime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:background="@color/salmon"
        android:text="@string/imc_prime"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toEndOf="@+id/txtIMC"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalcular" />

    <ScrollView
        android:layout_width="410dp"
        android:layout_height="183dp"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonHistorico">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/idHistorico"
                android:layout_width="wrap_content"
                android:layout_height="236dp"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="44dp"
                android:text="@string/historico"
                android:visibility="invisible"
                tools:text="HISTORIAL" />
        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>